--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ target/
 *.iws
 *.iml
 *.ipr
-
+.idea/copilot.data.migration.ask2agent.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/vcs.xml
 ### Eclipse ###
 .apt_generated
 .classpath
